--- a/index.html
+++ b/index.html
@@ -30,16 +30,12 @@
   <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-firestore-compat.js"></script>
 </head>
 <body>
-  <!-- Top Header -->
   <header class="card">
     <h1>Vision Journal</h1>
   </header>
 
-  <!-- Main two-column layout -->
   <div class="layout">
-    <!-- LEFT COLUMN -->
     <main id="main-content">
-      <!-- Login Screen -->
       <div id="login-screen" class="card">
         <h2>Sign Up or Log In</h2>
         <input type="email" id="email" placeholder="you@example.com" />
@@ -49,9 +45,7 @@
         <p id="login-msg"></p>
       </div>
 
-      <!-- Journal + Insights -->
       <div id="journal-screen" class="hidden">
-        <!-- Insights Box -->
         <div id="insights-box" class="card">
           <h2>Insights</h2>
           <div class="filters">
@@ -77,7 +71,6 @@
           </p>
         </div>
 
-        <!-- New Entry Box -->
         <div id="new-entry-box" class="card">
           <h2>New Entry</h2>
           <select id="type">
@@ -103,7 +96,6 @@
           <p id="entry-msg"></p>
         </div>
 
-        <!-- My Journal Box -->
         <div id="journal-box" class="card">
           <h2>My Journal</h2>
           <ul id="entries"></ul>
@@ -111,7 +103,6 @@
       </div>
     </main>
 
-    <!-- RIGHT SIDEBAR -->
     <aside id="feed-screen">
       <div id="logout-box" class="card hidden">
         <button id="logout">Logout</button>
@@ -123,7 +114,6 @@
     </aside>
   </div>
 
-  <!-- App Logic -->
   <script>
     // ── Firebase Init ─────────────────────────────
     const firebaseConfig = {
@@ -137,66 +127,70 @@
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth(), db = firebase.firestore();
 
-    // ── UI References ─────────────────────────────
-    const loginScreen  = document.getElementById('login-screen');
-    const journalScreen= document.getElementById('journal-screen');
-    const logoutBox    = document.getElementById('logout-box');
-    const loginMsg     = document.getElementById('login-msg');
-    const emailInput   = document.getElementById('email');
-    const passwordInput= document.getElementById('password');
-    const signupBtn    = document.getElementById('signup');
-    const loginBtn     = document.getElementById('login');
-    const logoutBtn    = document.getElementById('logout');
-    const saveBtn      = document.getElementById('save-entry');
-    const detectBtn    = document.getElementById('detect-location');
-    const locationDisp = document.getElementById('location-display');
-    const manualDiv    = document.getElementById('manual-location');
-    const countryInput = document.getElementById('country-input');
-    const stateInput   = document.getElementById('state-input');
-    const entriesList  = document.getElementById('entries');
-    const feedEntries  = document.getElementById('feed-entries');
-    const filterType   = document.getElementById('filter-type');
-    const filterTime   = document.getElementById('filter-time');
+    // ── UI Refs ─────────────────────────────────────
+    const loginScreen   = document.getElementById('login-screen');
+    const journalScreen = document.getElementById('journal-screen');
+    const logoutBox     = document.getElementById('logout-box');
+    const loginMsg      = document.getElementById('login-msg');
+    const emailInput    = document.getElementById('email');
+    const passwordInput = document.getElementById('password');
+    const signupBtn     = document.getElementById('signup');
+    const loginBtn      = document.getElementById('login');
+    const logoutBtn     = document.getElementById('logout');
+    const saveBtn       = document.getElementById('save-entry');
+    const detectBtn     = document.getElementById('detect-location');
+    const locationDisp  = document.getElementById('location-display');
+    const manualDiv     = document.getElementById('manual-location');
+    const countryInput  = document.getElementById('country-input');
+    const stateInput    = document.getElementById('state-input');
+    const entriesList   = document.getElementById('entries');
+    const feedEntries   = document.getElementById('feed-entries');
+    const filterType    = document.getElementById('filter-type');
+    const filterTime    = document.getElementById('filter-time');
 
     // ── Leaflet + Clustering ────────────────────────
     let map, markers, leafletReady=false;
     try {
       map = L.map('map').setView([20,0],2);
-      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{attribution:'&copy; OSM'}).addTo(map);
+      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{
+        attribution:'&copy; OpenStreetMap'
+      }).addTo(map);
       markers = L.markerClusterGroup();
       map.addLayer(markers);
       leafletReady=true;
     } catch(e){ console.warn(e) }
 
-    // ── Auth Handlers ────────────────────────────────
+    // ── Auth ────────────────────────────────────────
     signupBtn.onclick = () =>
       auth.createUserWithEmailAndPassword(emailInput.value,passwordInput.value)
-          .catch(e=>loginMsg.textContent=e.message);
-
+        .catch(e=>loginMsg.textContent=e.message);
     loginBtn.onclick = () =>
       auth.signInWithEmailAndPassword(emailInput.value,passwordInput.value)
-          .catch(e=>loginMsg.textContent=e.message);
-
+        .catch(e=>loginMsg.textContent=e.message);
     logoutBtn.onclick = () => auth.signOut();
 
-    auth.onAuthStateChanged(user => {
-      if (user) {
+    auth.onAuthStateChanged(user=>{
+      if(user){
         loginScreen.classList.add('hidden');
         journalScreen.classList.remove('hidden');
         logoutBox.classList.remove('hidden');
-        if (leafletReady) setTimeout(()=>map.invalidateSize(),200);
+        if(leafletReady) setTimeout(()=>map.invalidateSize(),200);
         loadJournal();
       } else {
         loginScreen.classList.remove('hidden');
         journalScreen.classList.add('hidden');
         logoutBox.classList.add('hidden');
       }
-      loadPublicFeed();
-      if (leafletReady) plotPublicMarkers();
+      refreshPublic();
     });
 
+    function refreshPublic(){
+      loadPublicFeed();
+      if(leafletReady) plotPublicMarkers();
+    }
+
     // ── Location Detection ────────────────────────────
-    detectBtn.onclick = () => {
+    detectBtn.onclick = ()=>{
       locationDisp.textContent='Detecting…';
       fetch('https://ipapi.co/json/')
         .then(r=>r.json())
@@ -207,14 +201,15 @@
             stateInput.value=d.region;
             manualDiv.classList.add('hidden');
           } else throw '';
-        }).catch(_=>{
+        })
+        .catch(_=>{
           locationDisp.textContent='Auto-detect failed; enter manually';
           manualDiv.classList.remove('hidden');
         });
     };
 
     // ── Save Entry ─────────────────────────────────────
-    saveBtn.onclick = () => {
+    saveBtn.onclick = async ()=>{
       const type = document.getElementById('type').value;
       const text = document.getElementById('text').value;
       const tags = document.getElementById('tags').value
@@ -222,37 +217,43 @@
       const isPublic = document.getElementById('isPublic').checked;
       const country = countryInput.value.trim();
       const state   = stateInput.value.trim();
-      if(!country||!state){ alert('Please enter country & state.'); return; }
+      if(!country||!state){
+        alert('Please enter country & state.');
+        return;
+      }
 
       const payload = {
-        userId    : auth.currentUser.uid,
+        userId   : auth.currentUser.uid,
         type, text, tags, isPublic,
-        location  : {country,state},
-        lat       : null,
-        lon       : null,
-        createdAt : firebase.firestore.FieldValue.serverTimestamp()
+        location : {country,state},
+        lat      : null,
+        lon      : null,
+        createdAt: firebase.firestore.FieldValue.serverTimestamp()
       };
 
-      // save to user journal
-      db.collection('visions').doc(auth.currentUser.uid)
-        .collection('entries').add(payload)
-        .then(()=>{
-          // if public also write to flat collection
-          if(isPublic) db.collection('publicEntries').add(payload);
-          document.getElementById('entry-msg').textContent='Saved!';
-          loadJournal();
-          loadPublicFeed();
-          plotPublicMarkers();
-        }).catch(()=>{
-          document.getElementById('entry-msg').textContent='Save failed.';
-        });
+      // save to journal
+      await db.collection('visions')
+        .doc(auth.currentUser.uid)
+        .collection('entries').add(payload);
+
+      // if public also append to flat collection
+      if(isPublic){
+        await db.collection('publicEntries').add(payload);
+      }
+
+      document.getElementById('entry-msg').textContent='Saved!';
+      loadJournal();
+      refreshPublic();
     };
 
-    // ── Load Personal Journal ──────────────────────────
+    // ── Load My Journal ───────────────────────────────
     function loadJournal(){
       entriesList.innerHTML='';
-      db.collection('visions').doc(auth.currentUser.uid)
-        .collection('entries').orderBy('createdAt','desc').get()
+      db.collection('visions')
+        .doc(auth.currentUser.uid)
+        .collection('entries')
+        .orderBy('createdAt','desc')
+        .get()
         .then(snap=>snap.forEach(doc=>{
           const d=doc.data();
           const li=document.createElement('li');
@@ -261,57 +262,87 @@
         }));
     }
 
-    // ── Load Public Feed ───────────────────────────────
+    // ── Load Public Feed (client-side filter) ─────────
     function loadPublicFeed(){
       feedEntries.innerHTML='';
-      let q = db.collection('publicEntries').orderBy('createdAt','desc');
-      if(!auth.currentUser) q=q.limit(10);
+      db.collection('publicEntries')
+        .orderBy('createdAt','desc')
+        .get()
+        .then(snap=>{
+          // convert to array with real JS dates
+          const all = snap.docs.map(doc=>{
+            const d = doc.data();
+            return {
+              ...d,
+              ts: d.createdAt ? d.createdAt.toDate().getTime() : 0
+            };
+          });
 
-      // type filter
-      if(filterType.value!=='all') q=q.where('type','==',filterType.value);
+          // filter by type
+          let filtered = all.filter(e=>
+            filterType.value==='all' || e.type===filterType.value
+          );
 
-      // time filter
-      const now=Date.now(), tf=filterTime.value;
-      let cutoff;
-      if(tf==='hour')  cutoff=now-3600e3;
-      if(tf==='day')   cutoff=now-86400e3;
-      if(tf==='week')  cutoff=now-7*86400e3;
-      if(tf==='month') cutoff=now-30*86400e3;
-      if(tf==='year')  cutoff=now-365*86400e3;
-      if(cutoff) q=q.where('createdAt','>=',firebase.firestore.Timestamp.fromMillis(cutoff));
+          // filter by time
+          if(filterTime.value!=='all'){
+            const now=Date.now(), span={
+              hour:3600e3,
+              day:86400e3,
+              week:7*86400e3,
+              month:30*86400e3,
+              year:365*86400e3
+            }[filterTime.value];
+            filtered = filtered.filter(e=> now - e.ts <= span );
+          }
 
-      q.get().then(snap=>{
-        if(snap.empty){
-          feedEntries.innerHTML='<p>No public entries.</p>';
-          return;
-        }
-        snap.forEach(doc=>{
-          const d=doc.data();
-          const loc=d.location||{};
-          const locText = loc.state ? ` (${loc.state}, ${loc.country})` : '';
-          const li=document.createElement('li');
-          li.textContent=`${d.type}: ${d.text}${locText}`;
-          feedEntries.append(li);
+          if(!filtered.length){
+            feedEntries.innerHTML='<p>No public entries.</p>';
+            return;
+          }
+
+          filtered.forEach(d=>{
+            const loc = d.location||{};
+            const locText = loc.state ? ` (${loc.state}, ${loc.country})` : '';
+            const li = document.createElement('li');
+            li.textContent = `${d.type}: ${d.text}${locText}`;
+            feedEntries.append(li);
+          });
         });
-      }).catch(console.error);
     }
 
-    // ── Plot Public Markers ─────────────────────────────
+    // ── Plot Markers (client-side filter) ─────────────
     function plotPublicMarkers(){
-      if(!leafletReady) return;
       markers.clearLayers();
       db.collection('publicEntries').get().then(snap=>{
-        snap.forEach(doc=>{
-          const d=doc.data();
+        snap.docs.forEach(doc=>{
+          const d = doc.data();
+          // must have lat/lon to plot
           if(d.lat==null||d.lon==null) return;
+
+          // same filtering logic
+          if(filterType.value!=='all' && d.type!==filterType.value) return;
+          if(filterTime.value!=='all' && d.createdAt){
+            const now=Date.now();
+            const ts = d.createdAt.toDate().getTime();
+            const span={
+              hour:3600e3, day:86400e3,
+              week:7*86400e3, month:30*86400e3,
+              year:365*86400e3
+            }[filterTime.value];
+            if(now - ts > span) return;
+          }
+
           const m = L.marker([d.lat,d.lon])
-            .bindPopup(`<strong>${d.type}</strong>: ${d.text}<br><em>${d.location.state}, ${d.location.country}</em>`);
+            .bindPopup(
+              `<strong>${d.type}</strong>: ${d.text}<br>`+
+              `<em>${d.location.state}, ${d.location.country}</em>`
+            );
           markers.addLayer(m);
         });
-      }).catch(console.error);
+      });
     }
 
-    // re‐apply when filters change
+    // re-filter on dropdown change
     filterType.onchange = filterTime.onchange = ()=>{
       loadPublicFeed();
       plotPublicMarkers();
